--- a/agritara/.github/workflows/main.yml
+++ b/agritara/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
     name: Build & Release
     runs-on: windows-latest
     steps:
+      - run: cd agritara
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
