--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,10 @@ jobs:
   build:
     name: Build & Release
     runs-on: windows-latest
+    defaults:
+      run:
+        working-directory: ./agritara
     steps:
-      - run: cd agritara
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
